unpackaged/main/default/objects/T1_GF_Survey_Recipient__c/T1_GF_Survey_Recipient__c.object-meta.xml
<CustomObject>
    <label>T1 GF Survey Recipient</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>T1 GF Survey Recipient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T1 GF Survey Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>