unpackaged/main/default/objects/T1_GF_Survey_Recipient__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>T1 GF Survey Recipients</relationshipLabel>
    <relationshipName>T1_GF_Survey_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>