unpackaged/main/default/objects/T1_GF_Survey_Recipient__c/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <description>The date and time the last survey was sent</description>
    <label>Survey Sent</label>
    <type>DateTime</type>
</CustomField>