unpackaged/main/default/objects/T1_GF_Survey_Recipient__c/fields/T1_GF_Survey__c.field-meta.xml
<CustomField>
    <fullName>T1_GF_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T1 GF Survey</label>
    <referenceTo>T1_GF_Survey__c</referenceTo>
    <relationshipLabel>T1 GF Survey Recipients</relationshipLabel>
    <relationshipName>T1_Survey_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>